--- a/src/main/webapp/moderator/index.html
+++ b/src/main/webapp/moderator/index.html
@@ -34,7 +34,7 @@
 					<li id="item_menu_today"><a href="#" onclick="cinema.getFilms(selectionType.TODAY)">today</a></li>
 					<li id="item_menu_tomorrow"><a href="#" onclick="cinema.getFilms(selectionType.TOMORROW)">tomorrow</a></li>
 					<li id="item_menu_weak"><a href="#" onclick="cinema.getFilms(selectionType.WEAK)">weak</a></li>
-					<li><a href="moderator.html">Admin panel</a></li>
+					<li><a href="/moderator/edit">Admin panel</a></li>
 				</ul>
 				<ul id="loginPlace" class="nav navbar-nav navbar-right">
 				</ul>
@@ -97,6 +97,7 @@
 				<!-- footer -->
 				<footer>
 					<div>
+						<span>&#x24B8;</span><span><strong>EpamTraining.</strong></span><span>Team code: <strong><i>Yaraslauski Maksim, Prymachou Pavel</i></strong></span><span>&#x24B8;</span>
 					</div>
 				</footer>
 				<!-- /footer -->
