--- a/src/main/webapp/user/index.html
+++ b/src/main/webapp/user/index.html
@@ -98,6 +98,7 @@
                 <!-- footer -->
                 <footer>
                     <div>
+                        <span>&#x24B8;</span><span><strong>EpamTraining.</strong></span><span>Team code: <strong><i>Yaraslauski Maksim, Prymachou Pavel</i></strong></span><span>&#x24B8;</span>
                     </div>
                 </footer>
                 <!-- /footer -->
