--- a/src/main/webapp/user/receive.html
+++ b/src/main/webapp/user/receive.html
@@ -113,6 +113,7 @@
                 <!-- footer -->
                 <footer>
                     <div>
+                        <span>&#x24B8;</span><span><strong>EpamTraining.</strong></span></span><span>Team code: <strong><i>Yaraslauski Maksim, Prymachou Pavel</i></strong></span><span>&#x24B8;</span>
                     </div>
                 </footer>
                 <!-- /footer -->
