--- a/src/main/webapp/moderator/moderator.html
+++ b/src/main/webapp/moderator/moderator.html
@@ -11,6 +11,7 @@
     <script src="../js/cinema_main.js"></script>
     <script src="../js/cinema_moderator.js"></script>
     <script src="../js/jquery.twbsPagination.js"></script>
+    <script src="../js/simplePagination.js"></script>
     <meta name=viewport content="width=device-width, initial-scale=1">
 </head>
 <body onload="moderator.run()">
@@ -32,22 +33,18 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li id="item_menu_all" class="active"><a href="#"
+                    <li id="item_menu_all"><a href="#"
                                                              onclick="cinema.getFilms(selectionType.ALL)">films</a></li>
                     <li id="item_menu_today"><a href="#" onclick="cinema.getFilms(selectionType.TODAY)">today</a></li>
                     <li id="item_menu_tomorrow"><a href="#"
                                                    onclick="cinema.getFilms(selectionType.TOMORROW)">tomorrow</a></li>
                     <li id="item_menu_weak"><a href="#" onclick="cinema.getFilms(selectionType.WEAK)">weak</a></li>
-                    <li><a href="moderator.html">Admin panel</a></li>
+                    <li><a href="/moderator/edit">Admin panel</a></li>
                 </ul>
                 <ul id="loginPlace" class="nav navbar-nav navbar-right">
                 </ul>
                 <script id="user_log_temp" type="temp">
 						<li><a href="../logout">{{userName}}, logout</a></li>
-
-
-
-
                 </script>
                 <script id="user_not_log_temp" type="temp">
 						<li class="dropdown">
@@ -118,8 +115,8 @@
 </div>
 
 <script id="entity_menu" type="template">
-    <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
+    <div class="collapse navbar-collapse"  id="bs-example-navbar-collapse-2">
+        <ul id="menu_items" class="nav navbar-nav">
             {{{items}}}
         </ul>
     </div>
@@ -137,7 +134,7 @@
     </thead>
 </script>
 <script id="table_entity_films" type="template">
-    <h2>List of {{name}}</h2>
+    <h2 style="text-align: center">List of {{name}}</h2>
     <table class="table table-hover">
         {{{head}}}
         <tbody>
@@ -160,7 +157,7 @@
 </script>
 
 <script id="table_entity_sessions" type="template">
-    <h2>List of {{name}}</h2>
+    <h2 style="text-align: center">List of {{name}}</h2>
     <table class="table table-hover">
         {{{head}}}
         <tbody>
@@ -182,7 +179,7 @@
         <div id="table_container">
         </div>
         <nav aria-label="Page navigation">
-            <ul class="pagination" id="pagination"></ul>
+                <div id="pagination" class="center-block" style="width: 40%;"></div>
         </nav>
     </div>
 </script>
